infrastructure/argocd/image-updater-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater
spec:
  template:
    spec:
      containers:
      - name: argocd-image-updater
        args:
        - --interval=1m
