infrastructure/argocd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.zid-internal.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
          passHostHeader: true
    - kind: Rule
      match: Host(`argocd.zid-internal.com`) && HeadersRegexp(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-server-tls
